--- a/informatiistyle.css
+++ b/informatiistyle.css
@@ -8,7 +8,7 @@
 body {
     line-height: 1.6;
     overflow-x: hidden;
-    background: black;
+    background: rgb(25, 23, 23);
 }
 
 .header {
@@ -43,4 +43,36 @@ h1{
     font-size: 50px;
     text-align: center;
     margin-top: 50px;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+}
+.row{
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+.col-3{
+    width: 50%;
+    padding: 0 10px;
+}
+.card{
+    background-color: white;
+    margin: 50px;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: center;
+}
+.card h3{
+    color: #333;
+    font-size: 30px;
+}
+.card p{
+    color: #333;
+    font-size: 24px;
+    margin-top: 20px;
 }
